--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet" />
-    <title>Vite + React + TS</title>
+    <title>Coffee Delivery</title>
   </head>
   <body>
     <div id="root"></div>
